--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -13,7 +13,7 @@
           .col-md-3 img{
 
           width:  100%;
-          max-height: 242px;
+          height: 242px;
           }
 
           body .carousel-indicator li{
@@ -61,30 +61,19 @@ bottom: auto;
     <div class="container carousel-inner no-padding">
 
       <div class="carousel-item active">
-        <div class="col-xs-3 col-sm-3 col-md-3 text-center">
-          <div class="card" style="width: 18rem;">
-            <img src='/media/{{product.0.image}}' class="card-img-top " alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{product.0.product_name}}</h5>
-                <p class="card-text">{{product.0.desc}}</p>
-                <a href="#" class="btn btn-primary">Add to Cart</a>
-            </div>
-          </div>
-       </div>
 
-
-        {% for i in product|slice:"1:"%}
+        {% for i in product %}
         <div class="col-xs-3 col-sm-3 col-md-3 m-3 text-center">
           <div class="card" style="width: 18rem;">
             <img src='/media/{{i.image}}' class="card-img-top " alt="...">
             <div class="card-body">
               <h5 class="card-title">{{i.product_name}}</h5>
-              <p class="card-text">{{i.desc}}</p>
-              <a href="#" class="btn btn-primary">Add To Cart</a>
+              <p class="card-text">{{i.description}}</p>
+              <button id='pr{{i.id}}' class="btn btn-primary cart">Add To Cart</button>
             </div>
           </div>
         </div>
-        {% if forloop.counter|divisibleby:2 and forloop.counter > 0 and not forloop.last %}
+        {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %}
       </div><div class="carousel-item">
         {% endif %}
 
@@ -103,3 +92,37 @@ bottom: auto;
     {% endfor %}
 </div>
  {% endblock %}
+
+
+
+ {%block js%}
+
+
+ 
+ <script>
+   
+
+    if(localStorage.getItem('cart')==null){
+        var cart={}
+    }
+    else{
+     cart=JSON.parse(localStorage.getItem('cart'))   
+     document.getElementById('cart').innerHTML=Object.keys(cart).length
+    }
+
+    $('.cart').click(function(){
+    
+       
+       var idstr = this.id.toString();
+       console.log(cart[idstr])
+    if (cart[idstr] != undefined) {
+        cart[idstr] = cart[idstr] + 1;
+    } else {
+        cart[idstr] = 1;
+    }
+       console.log(cart)
+       localStorage.setItem('cart',JSON.stringify(cart))
+       
+    })
+ </script>
+ {%endblock%}
