--- a/shop/templates/shop/basic.html
+++ b/shop/templates/shop/basic.html
@@ -15,41 +15,46 @@
   </head>
   <body>
   {% load static %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3 fw-bold">
   <a class="navbar-brand" href="#">Ecommerec Website</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto fw-bold">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/shop">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <p class="nav-link" >
-            Cart(<span id='cart'>0</span>)
-        </p>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+        <a class="nav-link" href='' >
+           
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+
+      <li class="nav-item fw-bold">
+        <a class="nav-link fw-bold" href="/shop/about">About us </a>
       </li>
+      <li class="nav-item ">
+        <a class="nav-link fw-bold" href="/shop/tracker">Tracker </a>
+      </li>
+      <li class="nav-item  ">
+        <a class="nav-link fw-bold" href="/shop/contact">Contact Us </a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link fw-bold" href="/shop/checkout">Checkout </a>
+      </li>
+
+     
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+
+    <button type="button" class="btn btn-lg btn-secondary mx-3" id='popcard' data-html="true" data-container="body" data-placement="bottom" data-toggle="popover" data-title="My Shopping Cart details" data-content="And here's some amazing content. It's very engaging. Right?">Cart(<span id='cart'>0</span>)</button>
+    
+
   </div>
 </nav>
 
@@ -67,6 +72,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   
-{%block js%} {%endblock%}
+{%block js%} <script>
+   
+
+    if(localStorage.getItem('cart')==null){
+        var cart={}
+    }
+    else{
+     cart=JSON.parse(localStorage.getItem('cart'))   
+     document.getElementById('cart').innerHTML=Object.keys(cart).length
+    }
+
+    $('.cart').click(function(){
+    
+       
+       var idstr = this.id.toString();
+       console.log(cart[idstr])
+    if (cart[idstr] != undefined) {
+        cart[idstr] = cart[idstr] + 1;
+    } else {
+        cart[idstr] = 1;
+    }
+       console.log(cart)
+       localStorage.setItem('cart',JSON.stringify(cart))
+       
+    })
+
+   $('#popcard').popover()
+   document.getElementById('popcard').setAttribute('data-content','<p>{cart}</p>')
+ </script> {%endblock%}
 </body>
 </html>
