--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -27,12 +27,14 @@
           body .carousel-control-prev-icon,
           body .carousel-control-next-icon{
           background-color: blue;
+        
           }
 
           .carousel-control-prev,
           .carousel-control-next{
           top: auto;
-bottom: auto;
+         
+          bottom: auto;
           }
            body .no-padding{
            padding-left: 0,
@@ -68,8 +70,9 @@ bottom: auto;
             <img src='/media/{{i.image}}' class="card-img-top " alt="...">
             <div class="card-body">
               <h5 class="card-title">{{i.product_name}}</h5>
-              <p class="card-text">{{i.description}}</p>
-              <button id='pr{{i.id}}' class="btn btn-primary cart">Add To Cart</button>
+              <p class="card-text">{{i.description |slice:'0:25'}}...</p>
+              <button id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</button>
+              <a href="/shop/productview/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-primary cart">View Details</button></a>
             </div>
           </div>
         </div>
@@ -99,30 +102,5 @@ bottom: auto;
 
 
  
- <script>
-   
-
-    if(localStorage.getItem('cart')==null){
-        var cart={}
-    }
-    else{
-     cart=JSON.parse(localStorage.getItem('cart'))   
-     document.getElementById('cart').innerHTML=Object.keys(cart).length
-    }
-
-    $('.cart').click(function(){
-    
-       
-       var idstr = this.id.toString();
-       console.log(cart[idstr])
-    if (cart[idstr] != undefined) {
-        cart[idstr] = cart[idstr] + 1;
-    } else {
-        cart[idstr] = 1;
-    }
-       console.log(cart)
-       localStorage.setItem('cart',JSON.stringify(cart))
-       
-    })
- </script>
+ 
  {%endblock%}
