--- a/shop/templates/shop/basic.html
+++ b/shop/templates/shop/basic.html
@@ -52,7 +52,7 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 
-    <button type="button" class="btn btn-lg btn-secondary mx-3" id='popcard' data-html="true" data-container="body" data-placement="bottom" data-toggle="popover" data-title="My Shopping Cart details" data-content="And here's some amazing content. It's very engaging. Right?">Cart(<span id='cart'>0</span>)</button>
+    <button type="button" class="btn btn-lg btn-secondary mx-3" id='popcart' data-html="true" data-container="body" data-placement="bottom" data-toggle="popover" data-title="My Shopping Cart details" data-content="And here's some amazing content. It's very engaging. Right?">Cart(<span id='cart'>0</span>)</button>
     
 
   </div>
@@ -72,34 +72,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   
-{%block js%} <script>
-   
+{%block js%} 
 
-    if(localStorage.getItem('cart')==null){
-        var cart={}
-    }
-    else{
-     cart=JSON.parse(localStorage.getItem('cart'))   
-     document.getElementById('cart').innerHTML=Object.keys(cart).length
-    }
-
-    $('.cart').click(function(){
     
-       
-       var idstr = this.id.toString();
-       console.log(cart[idstr])
-    if (cart[idstr] != undefined) {
-        cart[idstr] = cart[idstr] + 1;
-    } else {
-        cart[idstr] = 1;
-    }
-       console.log(cart)
-       localStorage.setItem('cart',JSON.stringify(cart))
-       
-    })
-
-   $('#popcard').popover()
-   document.getElementById('popcard').setAttribute('data-content','<p>{cart}</p>')
- </script> {%endblock%}
+    {%endblock%}
 </body>
 </html>
