--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -69,11 +69,15 @@
           <div class="card" style="width: 18rem;">
             <img src='/media/{{i.image}}' class="card-img-top " alt="...">
             <div class="card-body">
-              <h5 class="card-title">{{i.product_name}}</h5>
+              <h5 class="card-title" id='namepr{{i.id}}'>{{i.product_name}}</h5>
               <p class="card-text">{{i.description |slice:'0:25'}}...</p>
-              <button id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</button>
-              <a href="/shop/productview/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-primary cart">View Details</button></a>
-            </div>
+
+              <span id="divpr{{i.id}}" class="divpr">
+                <button id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</button>
+            </span>
+            <a href="/shop/productview/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-primary cart">View Details</button></a>
+        </div>
+
           </div>
         </div>
         {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %}
@@ -96,11 +100,94 @@
 </div>
  {% endblock %}
 
+ {%block js%} 
+ <script>
+    // Find out the cart items from localStorage
+    if (localStorage.getItem('cart') == null) {
+        var cart = {};
+    } else {
+        cart = JSON.parse(localStorage.getItem('cart'));
+    
+        updateCart(cart);
+    }
+    // If the add to cart button is clicked, add/increment the item
+    {% comment %} $('.cart').click(function() { {% endcomment %}
+    $('.divpr').on('click','button.cart',function() {
+        var idstr = this.id.toString();
+        if (cart[idstr] != undefined) {
+            cart[idstr] = cart[idstr] + 1;
+        } else {
+            cart[idstr] = 1;
+        }
+        updateCart(cart);
+        
+    });
+    //Add Popover to cart
+    $('#popcart').popover();
+    updatePopover(cart);
+    function updatePopover(cart)
+    {
+        
+        var popStr = "";
+        popStr = popStr + "<h5> Cart for your items in my shopping cart </h5><div class='mx-2 my-2'>";
+        var i = 1;
+        for (var item in cart){
+            popStr = popStr + "<b>" + i + "</b>. ";
+            popStr = popStr + document.getElementById('name' + item).innerHTML.slice(0, 19) + "...    Qauntity: " + cart[item] + '<br>';
+            i = i+1;
+        }
 
+        popStr = popStr + "</div> <a href='/shop/checkout'><button class='btn btn-primary' id ='checkout'>Checkout</button></a> <button class='btn btn-primary' onclick='clearCart()' id ='clearCart'>Clear Cart</button>     "
+   
+      
 
- {%block js%}
+        {% comment %} console.log(popStr); {% endcomment %}
 
+        document.getElementById('popcart').setAttribute('data-content', popStr);
+        $('#popcart').popover('show');
+    } 
 
+    function clearCart(){
+        cart=JSON.parse(localStorage.getItem('cart'))
+        for(var item in cart){
+            document.getElementById('div'+item).innerHTML='<button id="'+item+'" class="btn btn-primary cart">Add To Cart</button>'
+        }
+        localStorage.clear()
+        cart={}
+        updateCart(cart)
+        
+    }
+    function updateCart(cart) {
+        var sum=0;
+        for (var item in cart) {
+            sum=sum+cart[item]
+            document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button> <span id='val" + item + "''>" + cart[item] + "</span> <button id='plus" + item + "' class='btn btn-primary plus'> + </button>";
+        }
+        localStorage.setItem('cart', JSON.stringify(cart));
+        document.getElementById('cart').innerHTML = sum;
+
+        {% comment %} console.log(cart); {% endcomment %}
+
+        updatePopover(cart); 
+    }
+    // If plus or minus button is clicked, change the cart as well as the display value
+    $('.divpr').on("click", "button.minus", function() {
+        a = this.id.slice(7, );
+        cart['pr' + a] = cart['pr' + a] - 1;
+        cart['pr' + a] = Math.max(0, cart['pr' + a]);
+        document.getElementById('valpr' + a).innerHTML = cart['pr' + a];
+        updateCart(cart);
+    });
+    $('.divpr').on("click", "button.plus", function() {
+        a = this.id.slice(6, );
+        cart['pr' + a] = cart['pr' + a] + 1;
+        document.getElementById('valpr' + a).innerHTML = cart['pr' + a];
+        updateCart(cart);
+    });
+    </script>
  
- 
- {%endblock%}
+    {%endblock%}
+    
+    
+
+
