blogpost page is designed

--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto fw-bold">
       <li class="nav-item active">
-        <a class="nav-link" href="/shop">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/blog">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href='' >
@@ -33,19 +33,16 @@
       </li>
 
       <li class="nav-item fw-bold">
-        <a class="nav-link fw-bold" href="/shop/about">About us </a>
+        <a class="nav-link fw-bold" href="/blog/about">About us </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link fw-bold" href="/shop/tracker">Tracker </a>
+        <a class="nav-link fw-bold" href="/blog/tracker">Tracker </a>
       </li>
       <li class="nav-item  ">
-        <a class="nav-link fw-bold" href="/shop/contact">Contact Us </a>
+        <a class="nav-link fw-bold" href="/blog/contact">Contact Us </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link fw-bold" href="/shop/checkout">Checkout </a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link fw-bold" href="/blog/checkout">Go to Blog </a>
+        <a class="nav-link fw-bold" href="/blog/checkout">Checkout </a>
       </li>
 
      
