--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -133,7 +133,7 @@
     updatePopover(cart);
     
     function updatePopover(cart) {
-        console.log('We are inside updatePopover');
+    
         var popStr = "";
         popStr = popStr + "<h5> Cart for your items in my shopping cart </h5><div class='mx-2 my-2'>";
         var i = 1;
@@ -174,7 +174,15 @@
         a = this.id.slice(7, );
         cart['pr' + a][0] = cart['pr' + a][0] - 1;
         cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
+       if( cart['pr' + a][0]==0){
+        document.getElementById('divpr'+ a).innerHTML = '<button id="pr'+a+'" class="btn btn-primary cart">Add To Cart</button>'
+        delete cart['pr'+a]
+
+       }
+       else{
         document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+
+       }
         updateCart(cart);
     });
     $('.divpr').on("click", "button.plus", function() {
