facebook plug in of comment is added

--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -133,7 +133,7 @@
     updatePopover(cart);
     
     function updatePopover(cart) {
-    
+        console.log('We are inside updatePopover');
         var popStr = "";
         popStr = popStr + "<h5> Cart for your items in my shopping cart </h5><div class='mx-2 my-2'>";
         var i = 1;
