--- a/shop/templates/shop/basic.html
+++ b/shop/templates/shop/basic.html
@@ -16,7 +16,7 @@
   <body>
   {% load static %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3 fw-bold">
-  <a class="navbar-brand" href="#">Ecommerec Website</a>
+  <a class="navbar-brand" href="">Ecommerec Website</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -50,10 +50,11 @@
 
      
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+  </ul>
+  <form method='get' action='/shop/search/' class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
 
     <button type="button" class="btn btn-lg btn-secondary mx-3" id='popcart' data-html="true" data-container="body" data-placement="bottom" data-toggle="popover" data-title="My Shopping Cart details" data-content="And here's some amazing content. It's very engaging. Right?">Cart(<span id='cart'>0</span>)</button>
     
